feat(agent,pwa): improve auto-attach media flow and restrict chooser to images/videos

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -30,7 +30,7 @@
       <!-- Upload block moved above the PLUS row for faster flow -->
       <section>
         <label>Upload (mobile/desktop) and attach</label>
-        <input id="fileinput" type="file" />
+        <input id="fileinput" type="file" accept="image/jpeg,image/png,image/webp,image/heic,image/heif,image/avif,video/mp4,video/webm,video/quicktime" />
         <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
           <button data-action="upload-and-attach">Upload & Attach</button>
         </div>
@@ -39,10 +39,6 @@
           <div id="preview-area">
             <img id="preview-img" alt="preview" hidden />
             <video id="preview-video" controls hidden></video>
-            <div id="preview-fallback" class="muted" hidden>
-              Selected file: <span id="preview-name"></span>
-              (<span id="preview-type"></span>, <span id="preview-size"></span>)
-            </div>
           </div>
         </div>
       </section>
