--- a/pwa/index.html
+++ b/pwa/index.html
@@ -102,7 +102,16 @@
             <option value="10">10s</option>
             <option value="15">15s</option>
           </select>
-          <button data-action="apply-settings">Apply Settings</button>
+          <select id="resolution">
+            <option value="standard">Standard</option>
+            <option value="high">High</option>
+          </select>
+        </div>
+        <div class="row" style="grid-template-columns: repeat(4,minmax(0,1fr));">
+          <button data-action="apply-model">Set Model</button>
+          <button data-action="apply-orientation">Set Orientation</button>
+          <button data-action="apply-duration">Set Duration</button>
+          <button data-action="apply-resolution">Set Resolution</button>
         </div>
       </section>
 
