feat(script-updates): support script notes textarea via API and PWA

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -63,6 +63,14 @@
       </section>
 
       <section>
+        <label for="script-updates">Script updates</label>
+        <textarea id="script-updates" placeholder="Describe updates to your script..."></textarea>
+        <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
+          <button data-action="apply-script-updates">Apply Script Updates</button>
+        </div>
+      </section>
+
+      <section>
         <label for="filepath">Attach media (server path)</label>
         <input id="filepath" type="text" placeholder="/home/user/Downloads/file.jpg" />
         <div class="row" style="grid-template-columns: repeat(2,minmax(0,1fr));">
