chore(pwa): reorder controls and sync attach path

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -85,6 +85,13 @@
                 <video id="preview-video" controls hidden></video>
               </div>
             </div>
+            <div class="stack-row">
+              <label class="sub" for="filepath">Attached path</label>
+              <input id="filepath" type="text" placeholder="" readonly />
+              <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
+                <button data-action="attach-path">Attach Current Path</button>
+              </div>
+            </div>
           </div>
           <div class="card">
             <label class="sub" for="media-desc">Media description</label>
@@ -101,14 +108,6 @@
         <textarea id="script-updates" placeholder="Describe updates to your script..."></textarea>
         <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
           <button data-action="apply-script-updates">Apply Script Updates</button>
-        </div>
-      </section>
-
-      <section>
-        <label for="filepath">Attach media (server path)</label>
-        <input id="filepath" type="text" placeholder="/home/user/Downloads/file.jpg" />
-        <div class="row" style="grid-template-columns: repeat(2,minmax(0,1fr));">
-          <button data-action="attach-path">Attach by Path</button>
         </div>
       </section>
 
