--- a/pwa/index.html
+++ b/pwa/index.html
@@ -113,18 +113,22 @@
       </section>
 
       <section>
-        <label for="script-updates">Script updates</label>
-        <textarea id="script-updates" placeholder="Describe updates to your script..."></textarea>
-        <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
-          <button data-action="apply-script-updates">Apply Script Updates</button>
-        </div>
-      </section>
-
-      <section>
-        <label for="scenes">Storyboard (one scene per line)</label>
-        <textarea id="scenes" placeholder="Scene 1 text\nScene 2 text"></textarea>
-        <div class="row" style="grid-template-columns: repeat(2,minmax(0,1fr));">
-          <button data-action="apply-storyboard">Apply Storyboard</button>
+        <label>Storyboard</label>
+        <div class="stack">
+          <div class="card">
+            <label class="sub" for="scenes">Storyboard (one scene per line)</label>
+            <textarea id="scenes" placeholder="Scene 1 text\nScene 2 text"></textarea>
+            <div class="row" style="grid-template-columns: repeat(2,minmax(0,1fr));">
+              <button data-action="apply-storyboard">Apply Storyboard</button>
+            </div>
+          </div>
+          <div class="card">
+            <label class="sub" for="script-updates">Script updates</label>
+            <textarea id="script-updates" placeholder="Describe updates to your script..."></textarea>
+            <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
+              <button data-action="apply-script-updates">Apply Script Updates</button>
+            </div>
+          </div>
         </div>
       </section>
 
