--- a/pwa/index.html
+++ b/pwa/index.html
@@ -109,6 +109,20 @@
               <button data-action="describe">Apply Description</button>
             </div>
           </div>
+          <div class="card">
+            <label class="sub">Storyboard media</label>
+            <input id="storyboard-fileinput" type="file" accept="image/jpeg,image/png,image/webp,image/heic,image/heif,image/avif,video/mp4,video/webm,video/quicktime" />
+            <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
+              <button data-action="storyboard-upload">Upload & Attach</button>
+            </div>
+            <div class="stack-row">
+              <label class="sub" for="storyboard-filepath">Attached storyboard path</label>
+              <input id="storyboard-filepath" type="text" placeholder="" readonly />
+              <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
+                <button data-action="storyboard-attach-path">Attach Current Path</button>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
