chore(pwa): allow manual path editing in media cards

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="stack-row">
               <label class="sub" for="filepath">Attached path</label>
-              <input id="filepath" type="text" placeholder="" readonly />
+              <input id="filepath" type="text" placeholder="" />
               <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
                 <button data-action="attach-path">Attach Current Path</button>
               </div>
@@ -117,7 +117,7 @@
             </div>
             <div class="stack-row">
               <label class="sub" for="storyboard-filepath">Attached storyboard path</label>
-              <input id="storyboard-filepath" type="text" placeholder="" readonly />
+              <input id="storyboard-filepath" type="text" placeholder="" />
               <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
                 <button data-action="storyboard-attach-path">Attach Current Path</button>
               </div>
