feat(pwa): add 'Click Create' button in Storyboard panel (uses /api/click create)

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -125,6 +125,7 @@
           </div>
           <div class="row" style="grid-template-columns: repeat(2,minmax(0,1fr));">
             <button data-action="apply-storyboard">Apply Storyboard</button>
+            <button data-action="create">Click Create</button>
           </div>
           <div class="card">
             <label class="sub">Storyboard media</label>
