feat(pwa): add 'Open Storyboard' button; attach-path/upload now use combined /api/storyboard to mirror Apply Storyboard (no UI toggle)

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -128,6 +128,7 @@
             <input id="storyboard-fileinput" type="file" accept="image/jpeg,image/png,image/webp,image/heic,image/heif,image/avif,video/mp4,video/webm,video/quicktime" />
             <div class="row" style="grid-template-columns: repeat(1,minmax(0,1fr));">
               <button data-action="storyboard-upload">Upload & Attach</button>
+              <button data-action="open-storyboard-panel">Open Storyboard</button>
             </div>
             <div class="stack-row">
               <label class="sub" for="storyboard-filepath">Attached storyboard path</label>
